<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="#E1E1E1"
    android:layout_marginTop="50dp"
    card_view:cardCornerRadius="35dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1E1E1"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_Picture"
            android:layout_width="193dp"
            android:layout_height="94dp"
            android:layout_marginTop="34dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/car_name"
            card_view:layout_constraintTop_toBottomOf="@id/iv_Picture"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/car_price"
            android:padding="7dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_bg_price"
            card_view:layout_constraintTop_toBottomOf="@id/tv_car_name"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_car_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/car_desc"
            card_view:layout_constraintTop_toBottomOf="@id/tv_car_price"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_car_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/car_owner"
            card_view:layout_constraintTop_toBottomOf="@id/tv_car_desc"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toTopOf="@id/btn_lihat"
            />

        <Button
            android:id="@+id/btn_lihat"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="Lihat"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#2F2F2F"
            android:layout_marginBottom="20dp"
            card_view:layout_constraintRight_toLeftOf="@id/btn_hapus"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_car_owner"
            card_view:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="Hapus"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#E45763"
            android:layout_marginBottom="20dp"
            card_view:layout_constraintLeft_toRightOf="@id/btn_lihat"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_car_owner"
            card_view:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>